# MyPortfolio

./: .gitignore  PROJECT (1).md  README.md  SKILLS.md  sprint.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.emotion  Dockerfile.lite  pyproject.toml  render.yaml  requirements-dev.txt  requirements-emotion.txt  requirements-lite.txt  requirements.txt
backend/app/: main.py
backend/app/core/: body_limit.py  config.py  errors.py  logging.py  middleware.py
backend/app/data/: about.md  projects.md  search_catalog.py
backend/app/models/: chat.py  contact.py  emotion.py  errors.py  search.py  voice.py
backend/app/routers/: chat.py  contact.py  emotion.py  health.py  search.py  voice.py
backend/app/services/: chunking.py  embedder.py  emotion_inference.py  emotion_model.py  emotion_preprocessing.py  keyword_retrieval.py  lite_context.py  lite_search.py  ml_startup.py  prompt_guard.py  rag_chat.py  retrieval.py  search_index.py  voice.py
backend/deploy/oracle/: .env.example  docker-compose.yml
backend/embeddings/: rag_chunks.json  rag_chunks.npy  search_items.json  search_items.npy
backend/emotion_space/: README.md  app.py  main.py  requirements.txt
backend/scripts/: ingest.py
backend/tests/: conftest.py  test_body_limit.py  test_chat.py  test_contact.py  test_emotion.py  test_health.py  test_keyword_retrieval.py  test_lite_search.py  test_prompt_guard.py  test_search.py  test_smoke.py  test_voice.py
docs/: ACCEPTANCE.md  DEPLOY.md  LAUNCH_CHECKLIST.md  ORACLE_EMOTION.md
frontend/: .env.example  eslint.config.mjs  next.config.ts  (+4 more)
(+146 files in other folders)
