[project]
name = "aditya-ai-studio-backend"
version = "0.1.0"
description = "FastAPI inference backend for Aditya AI Studio"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Heavy ML libraries that ship no py.typed marker / stub package.
module = ["joblib", "scipy.*", "transformers.*", "torch.*", "xgboost.*", "sklearn.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
